Changed record-sidebar to be a composite component